--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Product — AION by EtherHall</title>
-  <meta name="description" content="AION — Artificially Intelligent Operating Nexus. Your AI is your Operating System. Local-first, private, portable." />
+  <!-- Updated meta description to reflect privacy-first, local AI focus -->
+  <meta name="description" content="AION is a local-first AI that runs on your hardware. Privacy-first, memory-enabled, and offered via alpha invites or business consultation." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -31,37 +32,39 @@
   </div>
 
   <!-- NAV (match sitewide) -->
-<div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
-  <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-    <div class="flex h-14 items-center justify-between">
-      <a href="index.html" class="flex items-center gap-2 font-extrabold tracking-tight" aria-label="EtherHall home">
-        <span class="inline-block h-6 w-6 rounded-full bg-haze2/40 ring-2 ring-haze2/60"></span>
-        <span>EtherHall</span>
-      </a>
-      <nav class="hidden md:flex items-center gap-8 text-sm text-white/80" aria-label="Primary">
-        <a href="product.html" class="text-white">Product</a>
-        <a href="about.html" class="hover:text-white">About</a>
-        <a href="index.html#roadmap" class="hover:text-white">Roadmap</a>
-        <a href="contact.html" class="hover:text-white">Contact</a>
-      </nav>
-      <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener"
-         class="hidden sm:inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 text-sm hover:border-haze2/40 hover:bg-white/10 transition"
-         aria-label="Join our Discord server">
-        <i data-lucide="messages-square" class="w-4 h-4"></i> Discord
-      </a>
+  <div class="sticky top-0 z-40 w-full glass/70 border-y border-line">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+      <div class="flex h-14 items-center justify-between">
+        <a href="index.html" class="flex items-center gap-2 font-extrabold tracking-tight" aria-label="EtherHall home">
+          <span class="inline-block h-6 w-6 rounded-full bg-haze2/40 ring-2 ring-haze2/60"></span>
+          <span>EtherHall</span>
+        </a>
+        <nav class="hidden md:flex items-center gap-8 text-sm text-white/80" aria-label="Primary">
+          <a href="product.html" class="text-white">Product</a>
+          <a href="about.html" class="hover:text-white">About</a>
+          <a href="index.html#roadmap" class="hover:text-white">Roadmap</a>
+          <a href="contact.html" class="hover:text-white">Contact</a>
+        </nav>
+        <a href="https://discord.gg/4EdaYwfS" target="_blank" rel="noopener"
+           class="hidden sm:inline-flex items-center gap-2 rounded-xl border border-line bg-white/5 px-3 py-1.5 text-sm hover:border-haze2/40 hover:bg-white/10 transition"
+           aria-label="Join our Discord server">
+          <i data-lucide="messages-square" class="w-4 h-4"></i> Discord
+        </a>
+      </div>
     </div>
   </div>
-</div>
-
 
   <!-- CONTENT -->
   <main class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8 py-14 space-y-10">
     <section class="grid lg:grid-cols-2 gap-8 items-center">
       <div>
-        <h1 class="text-4xl sm:text-5xl font-extrabold">AION — Artificially Intelligent Operating Nexus</h1>
+        <!-- Updated hero heading and copy to remove OS framing and emphasize local, private AI -->
+        <h1 class="text-4xl sm:text-5xl font-extrabold">AION — Local AI, owned by you</h1>
         <p class="mt-4 text-white/80 text-lg">
-          <strong>Your AI is your Operating System.</strong><br/>
-          Turn your PC into a <strong>local AI that grows with you</strong> — no subscriptions, no lock-in.
+          Turn your PC into a <strong>private local AI</strong> that can use memory and your files — <strong>no subscriptions</strong>, no cloud dependency.
+        </p>
+        <p class="mt-3 text-white/60 text-sm">
+          <strong>Status:</strong> Alpha testing for individuals (invite-only) · Business deployments via consultation
         </p>
       </div>
       <div class="rounded-3xl border border-line bg-white/[.06] p-2">
@@ -69,6 +72,7 @@
       </div>
     </section>
 
+    <!-- Feature grid -->
     <section class="grid md:grid-cols-2 gap-6">
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
         <h2 class="text-xl font-semibold">Everyday help</h2>
@@ -82,26 +86,28 @@
         <h2 class="text-xl font-semibold">Learn anything</h2>
         <p class="mt-2 text-white/70 text-sm">DIY is old news — now you Do It With your AI.</p>
       </div>
+      <!-- Replaced gamer card with privacy-first focus -->
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
-        <h2 class="text-xl font-semibold">For gamers</h2>
-        <p class="mt-2 text-white/70 text-sm">Kill the fluff and give your power back to the machine.</p>
+        <h2 class="text-xl font-semibold">Privacy‑first by design</h2>
+        <p class="mt-2 text-white/70 text-sm">AION runs locally so your sensitive conversations and documents stay on your device.</p>
       </div>
     </section>
 
+    <!-- Value propositions -->
     <section class="grid md:grid-cols-3 gap-6">
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
-        <h3 class="text-lg font-semibold">Local-first, private by default</h3>
+        <h3 class="text-lg font-semibold">Local‑first, private by default</h3>
         <ul class="mt-2 text-white/70 text-sm list-disc list-inside space-y-1">
           <li>Runs on your hardware.</li>
           <li>Your data stays with you.</li>
-          <li>Network features are opt-in and transparent.</li>
-          <li>No subscriptions. No cloud lock-in.</li>
+          <li>Network features are opt‑in and transparent.</li>
+          <li>No subscriptions. No cloud lock‑in.</li>
         </ul>
       </div>
       <div class="rounded-2xl border border-line bg-white/[.06] p-6">
         <h3 class="text-lg font-semibold">Portable & interchangeable</h3>
         <p class="mt-2 text-white/70 text-sm">
-          Boot AION from a portable SSD and take your workspace with you. Plug in anywhere; pick up right where you left off.
+          Run AION from a portable SSD and take your workspace with you. Plug in anywhere; pick up right where you left off.
         </p>
         <p class="mt-2 text-white/60 text-xs italic">(We call this drive <strong>The Forge</strong>.)</p>
       </div>
@@ -111,17 +117,24 @@
       </div>
     </section>
 
+    <!-- Audience section -->
     <section class="rounded-3xl border border-line bg-white/[.06] p-8">
       <h2 class="text-2xl font-bold">Who it’s for</h2>
-      <p class="mt-3 text-white/80">Families, small businesses, power users, and gamers who want speed, privacy, and control — without the nonsense.</p>
+      <p class="mt-3 text-white/80">
+        Individuals who want private AI on their own machine, and organizations that cannot share data online due to privacy or compliance constraints.
+      </p>
     </section>
 
+    <!-- Access section -->
     <section class="rounded-3xl border border-line bg-white/[.06] p-8">
-      <h2 class="text-2xl font-bold">Access for backers</h2>
-      <p class="mt-3 text-white/80"><strong>Early backers</strong> get <strong>Alpha</strong> and <strong>Beta</strong> access first.</p>
+      <h2 class="text-2xl font-bold">Alpha access</h2>
+      <p class="mt-3 text-white/80">
+        <strong>Individuals:</strong> AION is currently in <strong>alpha testing</strong> and access is invite‑only.<br/>
+        <strong>Businesses:</strong> We take consults to discuss privacy‑first, local AION customization for your organization.
+      </p>
       <div class="mt-5 flex flex-wrap gap-3">
-        <a href="index.html#updates" class="inline-flex items-center gap-2 rounded-2xl bg-neon text-black px-5 py-3 font-semibold hover:opacity-90">Get updates</a>
-        <a href="contact.html" class="inline-flex items-center gap-2 rounded-2xl border border-line px-5 py-3 font-semibold hover:bg-white/5">Talk to us</a>
+        <a href="contact.html" class="inline-flex items-center gap-2 rounded-2xl bg-neon text-black px-5 py-3 font-semibold hover:opacity-90">Request an invite / consult</a>
+        <a href="index.html#updates" class="inline-flex items-center gap-2 rounded-2xl border border-line px-5 py-3 font-semibold hover:bg-white/5">Get updates</a>
       </div>
     </section>
 
